--- a/src/app/note-modal/note-modal.component.html
+++ b/src/app/note-modal/note-modal.component.html
@@ -35,5 +35,5 @@
 </ion-content>
 
 <ion-footer>
-    <ion-button expand="full" color="primary" (click)="confirm()">Confirmar</ion-button>
+    <ion-button expand="full" color="primary" (click)="confirm()">Guardar</ion-button>
 </ion-footer>
