--- a/src/app/note-modal/note-modal.component.html
+++ b/src/app/note-modal/note-modal.component.html
@@ -34,5 +34,5 @@
 </ion-content>
 
 <ion-footer>
-    <ion-button expand="full" color="primary" (click)="confirm()">Guardar</ion-button>
+    <ion-button expand="block" color="success" (click)="confirm()">Guardar</ion-button>
 </ion-footer>
