--- a/src/app/note-create-modal/note-create-modal.component.html
+++ b/src/app/note-create-modal/note-create-modal.component.html
@@ -1,3 +1,29 @@
-<p>
-  note-create-modal works!
-</p>
+<ion-header>
+  <ion-toolbar>
+    <ion-title>Criar Nova Nota</ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="cancel()">Cancelar</ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content>
+  <ion-item>
+    <ion-label position="floating">Nome da Nota</ion-label>
+    <ion-input [(ngModel)]="note.name"></ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-label>Prioridade</ion-label>
+    <ion-select [(ngModel)]="note.priority">
+      <ion-select-option value="Normal">Normal</ion-select-option>
+      <ion-select-option value="Critica">Alta</ion-select-option>
+    </ion-select>
+  </ion-item>
+
+</ion-content>
+
+
+<ion-footer>
+  <ion-button expand="block" color="success" (click)="confirm()">Guardar</ion-button>
+</ion-footer>
